--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
